<resources>
    <string name="app_name">EzDataReceiver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="gpsTab">GPS</string>
    <string name="imgTab">IMG</string>
    <string name="vidTab">VID</string>
    <string name="log_out_btn">Logout</string>
    <string name="gps_btn_test">Get_Loc</string>
    <string name="to_img_btn">See my images</string>
    <string name="to_aud_btn">See my audios</string>
    <string name="title_activity_img_display">ImgDisplayActivity</string>
    <string name="title_activity_audio_display">AudioDisplayActivity</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
    <string name="hello">Hello</string>
    <string name="lastLoc">Your last login Location:</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="helloName"></string>
    <string name="lonVal">33.431</string>
    <string name="latVal">-111.903</string>
    <string name="demoImg1"></string>
    <string name="demoImg2"></string>
    <string name="demoImg3"></string>
    <string name="demoAud1"></string>
    <string name="demoAud2"></string>
    <string name="demoAud3"></string>
    <string name="title_activity_display_audio">DisplayAudioActivity</string>
    <string name="btnBackImg">Go Back</string>
    <string name="loginStatus">Status</string>
</resources>
