<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group34.ezdatareceiver.DisplayImageActivity">

    <!--<ListView-->
        <!--android:id="@+id/listViewImg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</ListView>-->


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/demoImg1"
        android:id="@+id/textAddr1"
        android:onClick="showAlert"
        android:clickable="true"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/demoImg2"
        android:id="@+id/textAddr2"
        android:onClick="showAlert"
        android:clickable="true"
        android:textAllCaps="false"
        android:layout_below="@+id/textAddr1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/demoImg3"
        android:id="@+id/textAddr3"
        android:onClick="showAlert"
        android:clickable="true"
        android:textAllCaps="false"
        android:layout_below="@+id/textAddr2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/btnBackImg"-->
        <!--android:id="@+id/btnImgBack"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true" />-->
</RelativeLayout>
